# ADE-Mobile_Manipulation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  runUnitTests.sh
UML/: ADE.vpp  ADE.vpp~103  (+46 more)
spike/armToDrivingPose/src/: CMakeLists.txt  Main.cpp  Main.hpp
spike/armToDrivingPose/src/types/: DGPS.h  Image.h  Joints.h  MotionCommand.h  Quaternion.h
spike/plannerExample/src/: CMakeLists.txt  Main.cpp  biFMplanner.cpp  biFMplanner.hpp
spike/plannerExample/src/types/: CMakeLists.txt  IMU.cpp  IMU.h  JointState.h  Pose.h  Types.hpp
test/harnessExample/: CMakeLists.txt  HarnessExample.cpp
test/unit/: .MobileManipMapTests.cpp.swp  ArmPlannerTests.cpp  CMakeLists.txt  FastMarchingTests.cpp  KinematicModelTests.cpp  MobileManipExecutorTests.cpp  MobileManipMapTests.cpp  MobileManipMotionPlannerTests.cpp  MotionPlanTests.cpp  UnitTests.cpp  buildUnitTests.sh  readMatrixFile.cpp  readMatrixFile.h  runUnitTests.sh
test/unit/data/: ColmenarRocks_smaller_10cmOffset.csv  ColmenarRocks_smaller_4cmDEM.csv  Fuerteventura_MMdem.tif  decosHeightField.tif  dummyCostMap.txt
test/unit/data/input/: armMotionProfile.txt  assignment.txt  costMap.txt  costMap_noShadowing.txt  path.txt
test/unit/data/input/MMExecutorTest/: armMotionProfile.txt  path.txt
test/unit/data/input/MMMapTest/: 00007.exr  1212.1628281354.363863_colmenar_subdem_id_1.ext  ColmenarRocks_Nominal_10cmDEM.csv  ColmenarRocks_Nominal_10cmOffset.csv  ColmenarRocks_smaller_10cmDEM.csv  ColmenarRocks_splitted_10cmDEM.csv  GalopprennbahnWest_Zone01blurred_10cmDEM.csv  RG_Colmenar_10cmDEM.csv  RG_Colmenar_10cmValidity.csv  RH1_Zone1_10cmDEM.csv  RH1_Zone1_10cmOffset.csv  RH1_Zone2_10cmDEM.csv  RH1_Zone2_10cmOffset.csv  RH1_Zone3_10cmDEM.csv  RH1_Zone3_10cmOffset.csv  RgDem.p_heightData_m.csv  RgDem.p_pointValidityFlag.csv  RgDem.param  sample_pos.txt
test/unit/data/input/MMMapTest/MagDEMs/: 00600.exr
test/unit/data/input/MMMapTest/MagLocCam/: 00600.exr
test/unit/data/input/MMMotionPlanTest/: GalopprennbahnWest_Zone01_10cmDEM.csv  RH1_Zone1_costMap.txt  costMap.txt  costMap_Shadowing.txt  costMap_discontinuous.txt  costMap_noShadowing.txt  costMap_splittedMap.txt  res_info.txt  rover_pos_01.txt  rover_pos_02.txt  rover_pos_03.txt  rover_pos_04.txt  rover_pos_05.txt  rover_sample_poses.txt  sample_pos.txt  sample_pos_01.txt  sample_pos_02.txt  sample_pos_03.txt  sample_pos_04.txt
test/unit/data/results/: 3Dpath.txt  EEPath.txt  TMapGoal.txt  TMapGoal3D.txt  TMapStart.txt  TMapStart3D.txt  armJoints.txt  assignment.txt  cMap3D.txt  path.txt  roverPath.txt
test/unit/mmFileManagerLib/: mmFileManager.cpp  mmFileManager.h
test/unit/mmReadingLib/: readMatrixFile.cpp
test/unit/moveit/results/: clean_logs_readme.txt  path01.txt  path02.txt  path03.txt  path04.txt  path05.txt  path06.txt  path07.txt  path08.txt  path09.txt  path10.txt  path11.txt  path12.txt  path13.txt  path14.txt  path15.txt  path16.txt  path17.txt  path18.txt  path19.txt  path20.txt  path21.txt  path22.txt  path23.txt  path24.txt  path25.txt  path26.txt  path27.txt  path28.txt  path29.txt  path30.txt  path31.txt  path32.txt  path33.txt  path34.txt  path35.txt  path36.txt  path37.txt  path38.txt  path39.txt  (+41 more)
test/unit/moveit/results/rosbags/1/: 1_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/10/: 10_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/11/: 11_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/12/: 12_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/13/: 13_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/14/: 14_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/15/: 15_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/16/: 16_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/17/: 17_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/18/: 18_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/19/: 19_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/2/: 2_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/20/: 20_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/21/: 21_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/22/: 22_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/23/: 23_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/24/: 24_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/25/: 25_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/26/: 26_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/27/: 27_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/28/: 28_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/29/: 29_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/3/: 3_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/30/: 30_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/31/: 31_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/32/: 32_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/33/: 33_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/34/: 34_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/35/: 35_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/36/: 36_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/37/: 37_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/38/: 38_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/39/: 39_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/4/: 4_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/40/: 40_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/5/: 5_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/6/: 6_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/7/: 7_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/8/: 8_0.db3  metadata.yaml
test/unit/moveit/results/rosbags/9/: 9_0.db3  metadata.yaml
utils/armCollisionsViewer/: CMakeLists.txt  MyWindow.cpp  MyWindow.hpp  README.txt  buildArmCollisionsViewer.sh  configuration.txt  main.cpp  runArmCollisionsViewer.sh
utils/collisionsPlotter/: CMakeLists.txt  CollisionPlotter.cpp  CollisionPlotter.h  README.txt  configuration.txt  main.cpp  orientation.txt  position.txt
(+331 files in other folders)
